Updating links and broken resume page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
                     
                     <!--activity descritpion-->
                     <p class="work">Living in Atlanta</p>
-                    <p>I had an unyielding, hidden interest in software development, while laboring in the manufacturing sector as a mechanical engineer for 17 years. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
+                    <p>I had an unyielding, hidden interest in software development while laboring in the manufacturing sector as a mechanical engineer for 17 years. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
                 
                 </div>
             </div>   
@@ -62,10 +62,10 @@
                         
                         <!--work tags-->
                         <p class="item-tags">
-                            <a href="#">ruby on rails</a> ,
-                            <a href="#">postgresql</a> ,
-                            <a href="#">heroku</a>,
-                            <a href="#">bootstrap</a>
+                            <a href="http://rubyonrails.org/" target="_blank">ruby on rails</a> ,
+                            <a href="http://www.postgresql.org/" target="_blank">postgresql</a> ,
+                            <a href="https://www.heroku.com/" target="_blank">heroku</a>,
+                            <a href="http://getbootstrap.com/" target="_blank">bootstrap</a>
                         </p>
                         
                     </div>
@@ -85,9 +85,10 @@
                         <p class="item-description">A web application for tracking homework and homework submissions.</p>
                         <hr>
                         <p class="item-tags">
-                            <a href="#">ruby on rails</a> ,
-                            <a href="#">heroku</a> ,
-                            <a href="#">bootstrap</a>
+                            <a href="http://rubyonrails.org/" target="_blank">ruby on rails</a> ,
+                            <a href="https://www.heroku.com/" target="_blank">heroku</a>,
+                            <a href="http://postgresql.org/" target="_blank">postgresql</a>,
+                            <a href="http://getbootstrap.com/" target="_blank">bootstrap</a>
                         </p>
                     </div>
                 </div>
@@ -105,8 +106,9 @@
                         <p class="item-description">A website for validating a startup idea.</p>
                         <hr>
                         <p class="item-tags">
-                            <a href="#">ruby on rails</a> ,
-                            <a href="#">bootstrap</a>
+                            <a href="http://rubyonrails.org/" target="_blank">ruby on rails</a> ,
+                            <a href="http://postgresql.org/" target="_blank">postgresql</a>,
+                            <a href="http://getbootstrap.com/" target="_blank">bootstrap</a>
                         </p>
                     </div>
                 </div>
@@ -124,8 +126,8 @@
                         <p class="item-description">A simple "to do" app coded with a paired programmer.</p>
                         <hr>
                         <p class="item-tags">
-                            <a href="#">ruby on rails</a> ,
-                            <a href="#">bootstrap</a>
+                            <a href="http://rubyonrails.org/" target="_blank">ruby on rails</a> ,
+                            <a href="http://getbootstrap.com/" target="_blank">bootstrap</a>
                         </p>
                     </div>
                 </div>
