Addressing styling issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require bootstrap_and_overrides
+ *= require bootstrap.min
+ *= require bootstrap-theme.min
  *= require_tree .
  *= require_self
  */
