--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-5 col-right">
-        <!--<div id="scroll-shadow"></div>-->
+        <div id="scroll-shadow"></div>
         
         <h1 class="visible-xs section-header">Last work</h1>
         <h1 class="visible-xs text-center spacer">___</h1>
