--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,5 +1,5 @@
-@import "twitter/bootstrap/bootstrap";
-@import "twitter/bootstrap/responsive";
+// @import "twitter/bootstrap/bootstrap";
+// @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
 @iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
@@ -33,4 +33,4 @@
 // Example:
 // @linkColor: #ff0000;
 @import "style.css";
-@import "bootstrap.min.css";
+
