--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -5,6 +5,7 @@ body {
 
 #portheader {
   font-size: 30px;
+  margin-bottom: 20px;
 }
 .heading {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -161,7 +162,7 @@ body,
 .row.top .col-right nav .list-inline li {
   display: table-cell;
   padding: 0;
-  width: 5%; /*change from 25% */
+  width: 25%; /*change from 25% */
 }
 .row.top .col-right nav .list-inline li.last a {
   display: inline;
@@ -183,7 +184,7 @@ body,
   text-transform: uppercase;
   color: #333333;
   border-right: 1px solid #e6e6e6;
-  padding: 10px 0;
+  padding: 13px 0;
   font-size: 16px;
 }
 @media (min-width: 768px) and (max-width: 992px) {
@@ -209,7 +210,7 @@ body,
 .row.top .col-right .social {
   position: relative;
   top: 0px;
-  left:10px;
+  left:5 px;
   width: 20px;
   height: 20px;
 }
