Additional edits to landing page.

--- a/app/views/resume/myresume.html
+++ b/app/views/resume/myresume.html
@@ -82,7 +82,7 @@
               <h4>Web Development</h4>
               <ul>
                 <li>Ruby on Rails</li>
-                <li>Postgresql</li>
+                <li>PostgreSQL</li>
                 <li>RSpec</li>
                 <li>TDD</li>
                 <li>HTML</li>
