--- a/app/views/resume/myresume.html
+++ b/app/views/resume/myresume.html
@@ -20,6 +20,7 @@
       <strong>Email:</strong>  <a href="mailto:jmscholen@gmail.com"/>jmscholen@gmail.com</a><br
       <strong>Twitter:</strong> <a href="https://twitter.com/jmscholen">@jmscholen</a><br />
       <strong>Github:</strong> <a href="https://github.com/jmscholen">jmscholen</a><br />
+      <strong>Website:</strong> <a href="http://jeffscholen.com">jeffscholen.com</a><br />
       </div>
     </section>
     <section class="row">
