--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
                     
                     <!--activity descritpion-->
                     <p class="work">Living in Atlanta</p>
-                    <p>I am a recent graduate to the Iron Yard, and I had an unyielding, hidden interest in software development while laboring in the manufacturing sector as a mechanical engineer for 17 years. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
+                    <p>I am a recent graduate of the Iron Yard who had an unyielding, hidden interest in software development while laboring in the manufacturing sector as a mechanical engineer. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
                 
                 </div>
             </div>   
