--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   	<%= csrf_meta_tags %>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-8174241-11', 'auto');
+      ga('send', 'pageview');
+  </script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
        <%= javascript_include_tag 'respond' %>
@@ -63,6 +73,7 @@
       <!-- <script src="javascripts/jquery.mixitup.min.js"></script>
         
         <!--<script src="javascripts/main.js"></script> -->
+
     </body>
 </html>
 
