added meta tag for mobile responsiveness

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
        <%= javascript_include_tag 'respond' %>
   		<%= javascript_include_tag 'html5shiv-printshiv' %>
 	<![endif]-->
-    
+      <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body class="page-index">
         <div class="container" id="container">
