Additional styling changes for landing page image

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
 <div class="row bottom">
     <div class="col-lg-8 col-md-8 col-sm-7 col-left">
         <div>
-        <!--    <section> -->
+        <section>
             <div class="row text-center">
                 <div class="col-lg-12">
            
                     <!--activity image-->
-                    <img  <%=image_tag("132.JPG", :alt => "Project header")%>
+                    <img class="img-responsive" <%=image_tag("132.jpg", :alt => "Project header")%>
                      
                     <!--activity title -->
                     <h1>hello. i'm a fullstack rails developer.</h1>
@@ -18,7 +18,7 @@
                 
                 </div>
             </div>   
-       <!--     </section> -->
+       </section>
         </div>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-5 col-right">
