--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
                 <div class="col-lg-12">
            
                     <!--activity image-->
-                    <img class="img-responsive" <%=image_tag("132.jpg", :alt => "Project header")%>
+                    <img class="img-responsive" <%=image_tag("132.JPG", :alt => "Project header")%>
                      
                     <!--activity title -->
                     <h1>hello. i'm a fullstack rails developer.</h1>
