--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
                     
                     <!--activity descritpion-->
                     <p class="work">Living in Atlanta</p>
-                    <p>I am a recent graduate of the Iron Yard who had an unyielding, hidden interest in software development while laboring in the manufacturing sector as a mechanical engineer. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
+                    <p>I am a husband, father, and passionate problem solver who isn't afraid to play princess with my three growing girls.  For the past 10 years I have been laboring in the medical device industry as a mechanical engineer while harboring an unyielding, secret interest in software development. Finding myself in between jobs in a weak market, I took a hold of my dream and enrolled in the Iron Yard's Ruby on Rails course. Adding to my passions for new technologies, creating useful gadgets (like the PowerCurl seen on <a href="https://www.quirky.com/shop/624-powercurl-macbook-power-cord-wrap?r=57440dc5fe400e148ece4345b6c23f4e" target="_blank">Quirky.com</a>), and cooking up a mean Lebanese kibbe, coding has satiated my desire to build and create using only my fingertips.</p>
                 
                 </div>
             </div>   
@@ -24,8 +24,8 @@
     <div class="col-lg-4 col-md-4 col-sm-5 col-right">
         <div id="scroll-shadow"></div>
         
-        <h1 class="visible-xs section-header">Last work</h1>
-        <h1 class="visible-xs text-center spacer">___</h1>
+        <!--<h1 class="visible-xs section-header">Last work</h1>
+        <h1 class="visible-xs text-center spacer">___</h1>-->
         <h4 class="text-center section-header" id="portheader">Portfolio of Work</h1>
         <!--work choice
         <div class="item-choice">
