Changed font on contact page

--- a/app/views/contacts/contact.html
+++ b/app/views/contacts/contact.html
@@ -8,12 +8,12 @@
                 <!--input contact-->
                 <h1>Contact</h1>
                 <h1 class="spacer">___</h1>
-                <h3><p>I'm available for hire or freelance. I would love to talk about any opportunities you may have.</p>
+                <p class="contact-font">I love developing web applications using Ruby on Rails. Contact me about your next project.</p>
                 <a href="mailto:jmscholen@gmail.com?subject=Found Your Portfolio&body=Hey Jeff, I'd like to speak with you about an upcoming opportunity!">jmscholen@gmail.com</a>
                 <br>
                 <a href="http://github.com/jmscholen" target="_blank">GitHub Repo</a>
                 <br>
-                <p>Mobile: 404-295-6995</p></h3>
+                <p>Mobile: 404-295-6995</p>
 
           
            <!--     </div> -->
@@ -33,7 +33,7 @@
                         <a href="#">
                             
                             <!--your image-->    
-                            <img class="img-responsive item-img" <%=image_tag("135.JPG", :alt => "Avatar")%>
+                            <img class="img-responsive item-img" <%=image_tag("134.JPG", :alt => "Avatar")%>
                             
                         </a>
                     </div>
@@ -43,10 +43,10 @@
                         <a href="#"><h4 class="item-title">Jeff Scholen</h4></a>
                         
                         <!--your profession / where you live-->
-                        <p class="item-category">Freelance web application developer, in Atlanta</p>
+                        <p class="item-category">Freelance web application developer, in Atlanta.</p>
                         
-                        <!--your descritpion / why should we contact you-->
-                        <p class="item-description">I love developing web applications using Ruby on Rails. Contact me about your next project.</p>
+                        <!--your descritpion / why should we contact you
+                        <p class="item-description">I love developing web applications using Ruby on Rails. Contact me about your next project.</p>-->
                         <hr>
                         
                         <!--social networks-->
