--- a/app/views/resume/myresume.html
+++ b/app/views/resume/myresume.html
@@ -29,7 +29,12 @@
       </header>
       <div class="col-md-9">
         <div class="skills">
-          <h3>Remington Medical Inc.</h3>
+          <h3>Vinsnap Inc.</h3>
+          <strong>Software Developer- Contract</strong>
+          <p>6/2014 - Present</p>
+          <p>Technical lead working with the founders to develop their next generation platform for providing automotive owners with realtime data analytics about their vehicles.</p>
+
+          <hr />            <h3>Remington Medical Inc.</h3>
           <strong>Engineering Project Manager</strong>
           <p>2/2012 - 12/2013</p>
           <p>Cross-functional team leader responsible for the development of medical devices. Received FDA clearance for a class II medical device and saved the company 30% in costs for an existing product line.</p>
