dropping resume and prepping for blog

--- a/app/views/contacts/contact.html
+++ b/app/views/contacts/contact.html
@@ -8,12 +8,10 @@
                 <!--input contact-->
                 <h1>Contact</h1>
                 <h1 class="spacer">___</h1>
-                <p class="contact-font">I love developing web applications using Ruby on Rails. Contact me about your next project.</p>
-                <a href="mailto:jmscholen@gmail.com?subject=Found Your Portfolio&body=Hey Jeff, I'd like to speak with you about an upcoming opportunity!">jmscholen@gmail.com</a>
+                <p class="contact-font">I love developing web applications using Ruby on Rails. I am currently employed Kevy. </p>
                 <br>
                 <a href="http://github.com/jmscholen" target="_blank">GitHub Repo</a>
                 <br>
-                <p>Mobile: 404-295-6995</p>
 
           
            <!--     </div> -->
@@ -43,10 +41,10 @@
                         <a href="#"><h4 class="item-title">Jeff Scholen</h4></a>
                         
                         <!--your profession / where you live-->
-                        <p class="item-category">Freelance web application developer, in Atlanta.</p>
+                        <p class="item-category">Software engineer in Atlanta.</p>
                         
                         <!--your descritpion / why should we contact you
-                        <p class="item-description">I love developing web applications using Ruby on Rails. Contact me about your next project.</p>-->
+                        <p class="item-description">I love developing web applications using Ruby on Rails.</p>-->
                         <hr>
                         
                         <!--social networks-->
