--- a/app/views/contacts/contact.html
+++ b/app/views/contacts/contact.html
@@ -8,7 +8,7 @@
                 <!--input contact-->
                 <h1>Contact</h1>
                 <h1 class="spacer">___</h1>
-                <p class="contact-font">I love developing web applications using Ruby on Rails. I am currently employed Kevy. </p>
+                <p class="contact-font">I love developing web applications using Ruby on Rails. I am currently employed with Kevy. </p>
                 <br>
                 <a href="http://github.com/jmscholen" target="_blank">GitHub Repo</a>
                 <br>
