Updated with Resume and contact info

--- a/app/views/contacts/contact.html
+++ b/app/views/contacts/contact.html
@@ -8,10 +8,12 @@
                 <!--input contact-->
                 <h1>Contact</h1>
                 <h1 class="spacer">___</h1>
-                <p class="contact-font">I love developing web applications using Ruby on Rails. I am currently employed with Kevy. </p>
+                <p class="contact-font">I love developing web applications using Ruby on Rails. Contact me about your next project. </p>
+                 <a href="mailto:jmscholen@gmail.com?subject=Found Your Portfolio&body=Hey Jeff, I'd like to speak with you about an upcoming opportunity!">jmscholen@gmail.com</a>
                 <br>
                 <a href="http://github.com/jmscholen" target="_blank">GitHub Repo</a>
                 <br>
+                <p>Mobile: 404-295-6995</p>
 
           
            <!--     </div> -->
