--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,12 +9,12 @@
                     <img class="img-responsive" <%=image_tag("132.JPG", :alt => "Project header")%>
                      
                     <!--activity title -->
-                    <h1>hello. i'm a fullstack rails developer.</h1>
+                    <h1>hello. i'm a ruby on rails developer.</h1>
                     <h1 class="spacer">___</h1>
                     
                     <!--activity descritpion-->
                     <p class="work">Living in Atlanta</p>
-                    <p>I am a husband, father, and passionate problem solver who isn't afraid to play princess with my three growing girls.  For the past 10 years I have been laboring in the medical device industry as a mechanical engineer while harboring an unyielding, secret interest in software development. Finding myself in between jobs in a weak market, I took a hold of my dream and enrolled in the Iron Yard's Ruby on Rails course. Adding to my passions for new technologies, creating useful gadgets (like the PowerCurl seen on <a href="https://www.quirky.com/shop/624-powercurl-macbook-power-cord-wrap?r=57440dc5fe400e148ece4345b6c23f4e" target="_blank">Quirky.com</a>), and cooking up a mean Lebanese kibbe, coding has satiated my desire to build and create using only my fingertips.</p>
+                    <p>I am a husband, father, and passionate problem solver who isn't afraid to play princess with my three growing girls. I am currently working as a software engineer for Vertafore, Inc. Vertafore supplies software solutions to the insurance industries. I work exclusively in the ROR stack and related technologies and love it. Front end to backend, I get my hands in it all. I am working on starting a blog and updating this site to share my experience with starting out as new developer. Please check back for an update!</p>
                 
                 </div>
             </div>   
